@@ -1,3 +1,7 @@
+2004-10-28  Albert Chu  <chu11@llnl.gov>
+
+	* gendersllnl.spec.in: Fixed additional port issues.
+	
 2004-10-26  Albert Chu  <chu11@llnl.gov>
 
 	* config/Make-rpm.mk: updated script for porting issues.
